tests/baselines/reference/returnValueInSetter(strict=true).errors.txt
returnValueInSetter.ts(2,9): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
returnValueInSetter.ts(2,11): error TS7006: Parameter 'value' implicitly has an 'any' type.
returnValueInSetter.ts(3,9): error TS2408: Setters cannot return a value.


==== returnValueInSetter.ts (3 errors) ====
    class f {
        set x(value) {
            ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
            return null; // Should be an error
            ~~~~~~
!!! error TS2408: Setters cannot return a value.
        }
    }
    
    